# DSPFlow

./: .gitignore  CMakeLists.txt  main.cpp  pipeline.h  step.h  stepFactory.h  steps.h
.github/workflows/: main.yml
qml/: Main.qml
qml/components/: PipelineView.qml  StepView.qml
tests/: test_pipeline.cpp
